k8s/ingress/external-names.yaml
# It is only possible to create an Ingress to address services inside
# the namespace in which the Ingress resides. To address services in other
# namespaces, we are going to ExternalName services in the Ingress namespace
# that maps to the DNS names of services in other namespaces.
apiVersion: v1
kind: Service
metadata:
  name: minecraft-service
  namespace: nginx-ingress
spec:
  type: ExternalName
  externalName: minecraft-service.gaming.svc.cluster.local
